# sibsutis

./: .gitignore
modern_probrems/lab1/task1/: a.out  main.c
modern_probrems/lab1/task2/: a.out  main.c  test
modern_probrems/lab1/task3/: a.out  main.c
modern_probrems/lab2/: a.out  main.c
modern_probrems/lab3/: a.out  task1  task1.c  task2.c
modern_probrems/lab4/: a.out  main.c  task1.c  task2  task2.c
modern_probrems/lab5/: brute_force_data.txt  comparison_data.txt  dfs_data.txt  dfs_program  dfs_time_data.txt  main.cpp  main1.cpp  plot.gp  plot2.gp  time_data.txt
modern_probrems/lab6/: a.out  lab3.c  main.cpp  plot1.gp  priority_data.txt  readers_data.txt
rgr/: bash.sh  busybox.yaml  flask-ingress.yaml  flask-service.yaml  mariadb.yaml  mult.yaml  mydb_dump.sql  nginx-config.yaml  nginx-service.yaml  nginx.yaml  requirements.txt
rgr/flask/: app.py  flask-config.yaml  flask.yaml  requirements.txt
security_technologies/lab1/: CMakeLists.txt  run_tests.sh
security_technologies/lab1/include/: crypto_utils.h  rdtsc.h
security_technologies/lab1/src/: benchmark_simple.cpp  crypto_utils.cpp  main_dh_original.cpp  main_dh_subgroup.cpp  main_generate_params.cpp  main_mqv.cpp  network_client.cpp  network_server.cpp
semester_4/PVT/cw/: main.c
semester_4/PVT/lab2/: plot.plt  plot2.plt  rezult.txt  rezult2.txt  test.txt
semester_4/PVT/lab3/: a.out  max_m_and_n.c  sgemv.c  (+2 more)
semester_5/OC/: a.out  loc.c  loc2.c  loc3.c  test  test.c
semester_8/moduls/: a.out  data.txt  lab1.c  lab_2.c  output.txt  plot.pl  test.c
semester_8/virtual/: Нечипоровский.docx
(+418 files in other folders)
